--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -32,7 +32,7 @@
 <p>These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</p>
 <p><strong>Changes to This Privacy Policy</strong></p>
 <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.</p>
-<p>Saee Creations has no control over the content used or create video by its users. We advise users not to use any copyright content in app. Saee creations is not responsible if any copyrighted content is used by its users.</p>
+<p>Saee Creations has no control over the content used to create video by its users. We advise users not to use any copyright content in app. Saee creations is not responsible if any copyrighted content is used by its users.</p>
 <p>This policy is effective as of 18-06-2021</p>
 <p><strong>Contact Us</strong></p>
 <p>If you believe that any content posted on the Video Invite - Wedding Invitation Video Maker infringes copyright, you may send us a notification including all relevant information on saeecreationsinfo@gmail.com, and content will be removed from app.</p>
