--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,7 +12,7 @@
 <p>Link to privacy policy of some third party service providers used by the app</p>
 <ul>
 <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noreferrer noopener">AdMob</a></li>
-<li><a href="https://www.facebook.com/about/privacy" target="_blank" rel="noreferrer noopener">Facebook Audience Network</a></li>
+<!-- <li><a href="https://www.facebook.com/about/privacy" target="_blank" rel="noreferrer noopener">Facebook Audience Network</a></li> -->
 <!--<li><a href="https://www.mopub.com/en/legal/privacy" target="_blank" rel="noreferrer noopener">Mopub</a></li>
 <li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noreferrer noopener">Google Play Services</a></li>-->
 </ul> 
